# OpenAIAstroPrediction

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  GOOGLE_API_SETUP.md  Procfile  README.md  allyogas.py  astrology.py  carear.py  check_ephemeris_integrity.py  dasa.py  dasa_bhukti.py  debug_deployment_difference.py  debug_moon_calculation.py  debug_moon_simple.py  ephe_loader.py  fix_all_modules.py  frontend_timezone_enhancements.js  indu_dasa.py  life_purpose.py  main.py  nixpacks.toml  package.json  pyproject.toml  railway.json  render.yaml  requirements.txt  setup.py  spouse_analysis.py  start.sh  swiss_ephemeris_diagnostic.py  test-google-apis.js  test_current_setup.py  vercel.json
Originial/: allyogas.py  dasa_bhukti.py  indu_dasa.py  main.py  requirements.txt
astro-backend/: .replit  main.py  pyproject.toml
astro-backend/astro-backend/: .replit  allyogas.py  astro_backend_main.py  astrology.py  carear.py  dasa.py  dasa_bhukti.py  ephe_loader.py  indu_dasa.py  life_purpose.py  main-bkup.py  requirements.txt  spouse_analysis.py
astro-frontend/: .replit
astro-frontend/pages/: index.js
backend/: main.py  railway.toml  requirements.txt
backend/modules/: __init__.py  allyogas.py  astrology.py  astrology_working.py  career.py  dasa_bhukti.py  global_timezone_utils.py  indu_dasa.py  life_purpose.py  spouse_analysis.py
frontend/: .env.local.example  README.md  netlify.toml  next.config.js  package-lock.json  package.json  vercel.json
frontend/pages/: index.js  test.js
pages/: index.js
public/: manifest.json  robots.txt
(+5 files in other folders)
